tdf#124247: Fix tooltip message when color added to recent colors

Presently, the tool tip text in recent colors is shown in its
 hexadecimal representation. Change the hexadecimal representation
 of the colors in 'recent colors' to its actual color name.

Change-Id: I59636eb124b75a9397337c9560bfff72804424ae